# grite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.sh  install.sh  specs.md  specs1.md  specs2.md
.claude/skills/: grite.md
.github/workflows/: ci.yml  release.yml
.grit/: export.json  export.md
crates/grit/: Cargo.toml
crates/grit-daemon/: Cargo.toml
crates/grit-daemon/src/: error.rs  main.rs  worker.rs
crates/grit-daemon/tests/: integration_tests.rs
crates/grit/src/: agents_md.rs  cli.rs  context.rs  event_helper.rs  main.rs  output.rs  router.rs
crates/grit/src/commands/: actor.rs  context.rs  daemon.rs  db.rs  dep.rs  doctor.rs  export.rs  init.rs  issue.rs  lock.rs  mod.rs  rebuild.rs  snapshot.rs  sync.rs
crates/gritd/: Cargo.toml
crates/gritd/src/: main.rs  supervisor.rs  worker.rs
crates/gritd/tests/: integration_tests.rs
crates/grite/: Cargo.toml  README.md
crates/grite-bench/: Cargo.toml
crates/grite-bench/src/: app.rs  error.rs  main.rs
crates/grite-bench/src/bench/: agent.rs  config.rs  metrics.rs  mod.rs  runner.rs  scenario.rs
crates/grite-bench/src/ui/: layout.rs  mod.rs
crates/grite-bench/src/ui/widgets/: agents.rs  histogram.rs  log.rs  mod.rs  summary.rs  throughput.rs
crates/grite-daemon/: Cargo.toml  README.md
crates/grite-daemon/src/: error.rs  lib.rs  main.rs  signals.rs  state.rs  supervisor.rs  worker.rs
crates/grite-daemon/tests/: concurrent_requests_test.rs  integration_tests.rs
crates/grite/src/: agents_md.rs  cli.rs  context.rs  event_helper.rs  main.rs  output.rs  router.rs
crates/grite/src/commands/: actor.rs  context.rs  daemon.rs  db.rs  dep.rs  doctor.rs  export.rs  init.rs  install_skill.rs  issue.rs  lock.rs  mod.rs  rebuild.rs  snapshot.rs  sync.rs
crates/grited/: Cargo.toml
crates/grited/src/: main.rs  supervisor.rs
crates/grited/tests/: integration_tests.rs
crates/libgrit-core/: Cargo.toml
crates/libgrit-core/src/: config.rs  error.rs  export.rs  hash.rs  integrity.rs  lib.rs  lock.rs  projection.rs
crates/libgrit-core/src/context/: extractor.rs
crates/libgrit-core/src/context/extractor/: ts_engine.rs
crates/libgrit-core/src/store/: mod.rs
crates/libgrit-core/src/types/: actor.rs  event.rs  issue.rs  mod.rs
crates/libgrit-core/tests/: stress_store.rs
crates/libgrit-git/: Cargo.toml
crates/libgrit-git/src/: chunk.rs  error.rs  lib.rs  lock_manager.rs  snapshot.rs  sync.rs  wal.rs
crates/libgrit-git/tests/: stress_locks.rs  stress_wal.rs
crates/libgrit-ipc/: Cargo.toml
crates/libgrit-ipc/src/: client.rs  discovery.rs  error.rs  lock.rs  messages.rs  notifications.rs
crates/libgrite-cli/: Cargo.toml  README.md
crates/libgrite-cli/src/: actor.rs  agents_md.rs  async_wrappers.rs  context.rs  context_cmd.rs  daemon.rs  db.rs  dep.rs  doctor.rs  export.rs  init.rs  issue.rs  lib.rs  lock.rs  rebuild.rs  snapshot.rs  sync.rs  types.rs
crates/libgrite-core/: Cargo.toml  README.md
crates/libgrite-core/src/: config.rs  error.rs  export.rs  hash.rs  integrity.rs  lib.rs  lock.rs  projection.rs  signing.rs
crates/libgrite-core/src/context/: mod.rs
crates/libgrite-core/src/context/extractor/: mod.rs  regex_fallback.rs  ts_engine.rs
crates/libgrite-core/src/store/: mod.rs
crates/libgrite-core/src/types/: actor.rs  context.rs  event.rs  ids.rs  issue.rs  mod.rs
crates/libgrite-core/tests/: stress_store.rs
crates/libgrite-git/: Cargo.toml  README.md
crates/libgrite-git/src/: chunk.rs  error.rs  lib.rs  lock_manager.rs  snapshot.rs  sync.rs  wal.rs
crates/libgrite-git/tests/: stress_locks.rs  stress_wal.rs
crates/libgrite-ipc/: Cargo.toml  README.md
crates/libgrite-ipc/src/: client.rs  discovery.rs  error.rs  framing.rs  lib.rs  lock.rs  messages.rs  notifications.rs
demo/: README.md
docs/: actors.md  agent-playbook.md  architecture.md  cli-json.md  cli.md  comparison.md  configuration.md  daemon.md  data-model.md  export-format.md  git-wal.md  hash-vectors.md  ipc.md  locking.md  operations.md  roadmap.md  use-cases.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/agents/: index.md  playbook.md
documentation/docs/architecture/: crdt-merging.md  data-model.md  git-wal.md  index.md  storage.md  three-layer.md
documentation/docs/contributing/: index.md  security.md
documentation/docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
documentation/docs/guides/: actors.md  comparison.md  context.md  daemon.md  dependencies.md  export.md  index.md  issues.md  locking.md  syncing.md  worktrees.md
documentation/docs/operations/: doctor.md  index.md  rebuild.md  snapshots.md  troubleshooting.md
documentation/docs/reference/: cli-json.md  cli.md  configuration.md  environment.md  index.md
documentation/docs/stylesheets/: extra.css
documentation/docs/use-cases/: ai-agents.md  developers.md  devops.md  index.md  security.md  teams.md
packaging/chocolatey/: grit.nuspec  grite.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/gem/: README.md  grit-cli.gemspec  grite-cli.gemspec  grite.gemspec
packaging/gem/exe/: grit  grit-daemon  gritd  grite  grite-daemon  grited
packaging/gem/lib/: grit-cli.rb  grite-cli.rb  grite.rb
packaging/homebrew/: grit.rb  grite.rb
packaging/npm/: README.md  index.js  install.js  package.json
packaging/pip/: README.md  pyproject.toml
packaging/pip/grit_cli/: __init__.py
packaging/pip/grite_cli/: __init__.py  __main__.py
scripts/: install-npm.sh  install-pip.sh  release.sh
