[workspace]
resolver = "2"
members = [
    "crates/libgrit-core",
    "crates/libgrit-git",
    "crates/grit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
blake2 = "0.10"
ciborium = "0.2"
sled = "0.34"
git2 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
