[workspace]
resolver = "2"
members = [
    "crates/libgrit-core",
    "crates/libgrit-git",
    "crates/libgrit-ipc",
    "crates/grit",
    "crates/grit-daemon",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/neul-labs/grit"
homepage = "https://github.com/neul-labs/grit"
documentation = "https://docs.neullabs.com/grit"
readme = "README.md"
keywords = ["git", "issue-tracker", "crdt", "agents", "distributed"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
blake2 = "0.10"
ciborium = "0.2"
sled = "0.34"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rkyv = "0.8"
nng = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
fs2 = "0.4"
regex = "1"
glob = "0.3"
tree-sitter = "0.24"
tree-sitter-language = "0.1"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-elixir = "0.3"
