[package]
name = "grit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Git-backed issue tracker with CRDT merging, designed for AI coding agents"
readme = "../../README.md"

[[bin]]
name = "grit"
path = "src/main.rs"

[dependencies]
libgrit-core = { path = "../libgrit-core", version = "0.2.2" }
libgrit-git = { path = "../libgrit-git", version = "0.2.2" }
libgrit-ipc = { path = "../libgrit-ipc", version = "0.2.2" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
