[package]
name = "gritd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grit daemon for improved performance and IPC"

[[bin]]
name = "gritd"
path = "src/main.rs"

[dependencies]
libgrit-core = { path = "../libgrit-core" }
libgrit-git = { path = "../libgrit-git" }
libgrit-ipc = { path = "../libgrit-ipc" }
nng = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
