[package]
name = "grite-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TUI benchmark tool for testing concurrent agent writes to grite"
readme = "../../README.md"

[[bin]]
name = "grite-bench"
path = "src/main.rs"

[dependencies]
libgrite-core = { path = "../libgrite-core", version = "0.3.0" }
libgrite-git = { path = "../libgrite-git", version = "0.3.0" }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
git2 = { workspace = true }

# Metrics
hdrhistogram = "7.5"

[dev-dependencies]
tempfile = "3.10"
