[package]
name = "grite-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Background daemon for grite providing concurrent access and performance"
readme = "../../README.md"

[[bin]]
name = "grite-daemon"
path = "src/main.rs"

[dependencies]
libgrite-core = { path = "../libgrite-core", version = "0.3.0" }
libgrite-git = { path = "../libgrite-git", version = "0.3.0" }
libgrite-ipc = { path = "../libgrite-ipc", version = "0.3.0" }
nng = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
