[package]
name = "grited"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Background daemon for grit providing concurrent access and performance"
readme = "../../README.md"

[[bin]]
name = "grited"
path = "src/main.rs"

[dependencies]
libgrit-core = { path = "../libgrit-core", version = "0.2.0" }
libgrit-git = { path = "../libgrit-git", version = "0.2.0" }
libgrit-ipc = { path = "../libgrit-ipc", version = "0.2.0" }
nng = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
