[package]
name = "libgrit-core"
version.workspace = true
edition.workspace = true

[dependencies]
blake2 = { workspace = true }
ciborium = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
