[package]
name = "libgrit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for grit: event types, CRDT projections, hashing, and sled store"
readme = "../../README.md"

[dependencies]
blake2 = { workspace = true }
ciborium = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
