[package]
name = "libgrit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for grit: event types, CRDT projections, hashing, and sled store"
readme = "../../README.md"

[dependencies]
blake2 = { workspace = true }
ciborium = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
streaming-iterator = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-elixir = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
