[package]
name = "libgrit-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Git WAL, sync, and snapshot operations for grit"
readme = "../../README.md"

[dependencies]
libgrit-core = { path = "../libgrit-core", version = "0.2.1" }
git2 = { workspace = true }
blake2 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
