[package]
name = "libgrit-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "IPC types and client for grit daemon communication"

[dependencies]
libgrit-core = { path = "../libgrit-core" }
rkyv = { workspace = true }
nng = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
