[package]
name = "libgrite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Programmatic CLI library for grite: issue tracking, sync, and context management"
readme = "README.md"
authors.workspace = true

[features]
default = []
async = ["dep:tokio"]

[dependencies]
libgrite-core = { path = "../libgrite-core", version = "0.5.0" }
libgrite-git = { path = "../libgrite-git", version = "0.5.0" }
libgrite-ipc = { path = "../libgrite-ipc", version = "0.5.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
