[package]
name = "libgrite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for grite: event types, CRDT projections, hashing, and sled store"
readme = "README.md"
authors.workspace = true

[features]
default = ["context"]
context = [
    "dep:tree-sitter",
    "dep:tree-sitter-language",
    "dep:streaming-iterator",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-elixir",
]

[dependencies]
blake2 = { workspace = true }
ciborium = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-language = { workspace = true, optional = true }
streaming-iterator = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
