[package]
name = "libgrite-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "IPC types and client for grite daemon communication"
readme = "../../README.md"

[dependencies]
libgrite-core = { path = "../libgrite-core", version = "0.3.0" }
rkyv = { workspace = true }
nng = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
