[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grit-cli"
version = "0.1.0"
description = "Git-backed issue tracking for coding agents and humans"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Neul Labs"}
]
keywords = ["git", "issue-tracking", "task-management", "cli", "coding-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/neul-labs/grit"
Repository = "https://github.com/neul-labs/grit"
Issues = "https://github.com/neul-labs/grit/issues"

[project.scripts]
grit = "grit_cli:main"
gritd = "grit_cli:main_daemon"

[tool.setuptools.packages.find]
where = ["."]
