[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grite-cli"
version = "0.3.0"
description = "Git-backed issue tracking for coding agents and humans"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neul Labs"}
]
keywords = ["git", "issue-tracking", "task-management", "cli", "coding-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/neul-labs/grite"
Repository = "https://github.com/neul-labs/grite"
Issues = "https://github.com/neul-labs/grite/issues"

[project.scripts]
grite = "grite_cli:main"
grite-daemon = "grite_cli:main_daemon"

[tool.setuptools.packages.find]
where = ["."]
